--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cublueprint-react-website",
   "version": "0.1.0",
-  "homepage": "https://cublueprint.github.io",
+  "homepage": "https://carleton-blueprint.github.io",
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
