--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-dom": "^18.2.19",
     "@types/react-router-dom": "^5.1.8",
     "@types/styled-components": "^5.1.34",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^7.4.0",
     "@typescript-eslint/parser": "^7.4.0",
     "react": "^18.2.0",
@@ -34,6 +35,7 @@
     "styled-components-carousel": "^0.2.0",
     "swiper": "^10.0.4",
     "typescript": "^5.3.3",
+    "uuid": "^9.0.1",
     "web-vitals": "^3.5.2"
   },
   "scripts": {
