--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "@types/uuid": "^9.0.8",
+    "contentful": "^10.8.6",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "sharp": "^0.33.3",
     "styled-components": "^6.1.8",
     "uuid": "^9.0.1"
   },
