--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^5.0.1",
     "sharp": "^0.33.3",
     "styled-components": "^6.1.8",
+    "typewriter-effect": "^2.21.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
