--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.0.4",
     "lucide-react": "^0.363.0",
-    "next": "14.1.4",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^14.1.4",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-icons": "^5.0.1",
     "react-notion": "^0.10.0",
-    "sharp": "^0.33.3",
+    "sharp": "^0.33.4",
     "styled-components": "^6.1.8",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
