--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "embla-carousel-react": "^8.0.4",
     "lucide-react": "^0.363.0",
     "next": "^14.1.4",
+    "next-cloudinary": "^6.6.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.0.1",
