--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,7 @@ run-name: ${{ github.actor }} is deploying main
 on:
   push:
     branches:
-      - main
+      - dev
 jobs:
   deploy:
     runs-on: ubuntu-latest
