--- a/package.json
+++ b/package.json
@@ -23,10 +23,11 @@
     "lucide-react": "^0.363.0",
     "next": "^14.1.4",
     "next-cloudinary": "^6.6.2",
+    "notion-client": "^6.16.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
-    "react-notion": "^0.10.0",
+    "react-notion-x": "^6.16.0",
     "sharp": "^0.33.4",
     "styled-components": "^6.1.8",
     "tailwind-merge": "^2.2.2",
