--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-notion": "^0.10.0",
+    "resend": "^3.5.0",
     "sharp": "^0.33.3",
     "styled-components": "^6.1.8",
     "tailwind-merge": "^2.2.2",
