--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toast": "^1.2.1",
+    "@types/react-google-recaptcha": "^2.1.9",
     "@types/uuid": "^9.0.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
@@ -28,10 +29,11 @@
     "notion-utils": "^6.16.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-google-recaptcha": "^3.1.0",
     "react-icons": "^5.0.1",
     "react-notion-x": "^6.16.0",
-    "sharp": "^0.33.4",
     "resend": "^3.5.0",
+    "sharp": "^0.33.4",
     "styled-components": "^6.1.8",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
