--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,7 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": ["eslint:recommended", "next/core-web-vitals", "prettier"],
+  "ignorePatterns": ["node_modules", ".next", ".github", "src/components/ui/*"],
+  "rules": {
+    "no-irregular-whitespace": "off"
+  }
 }
