--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "format": "prettier --check '**/*.{js,jsx,ts,tsx,json,css,md}'",
     "dev": "next dev",
-    "build": "next build",
+    "build": "npm run format && npm run lint && next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "npx eslint . --ext .ts,.tsx,.js,.jsx"
   },
   "dependencies": {
     "@notionhq/client": "^2.2.15",
@@ -42,14 +43,17 @@
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^4.29.5-appdir.0",
+    "@types/eslint__js": "^8.42.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
-    "eslint": "^8",
+    "eslint": "^8.57.1",
     "eslint-config-next": "^14.1.4",
+    "eslint-config-prettier": "^9.1.0",
     "postcss": "^8",
+    "prettier": "3.3.3",
     "tailwindcss": "^3.3.0",
-    "typescript": "^5"
+    "typescript-eslint": "^8.14.0"
   }
 }
