--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "postcss": "^8",
     "prettier": "3.3.3",
     "tailwindcss": "^3.3.0",
+    "typescript": "^5",
     "typescript-eslint": "^8.14.0"
   }
 }
