--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-icons": "^5.0.1",
     "react-notion-x": "^6.16.0",
     "resend": "^3.5.0",
+    "sharp": "^0.33.5",
     "styled-components": "^6.1.8",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
