--- a/.prettierrc
+++ b/.prettierrc
@@ -7,5 +7,6 @@
   "printWidth": 120,
   "arrowParens": "avoid",
   "jsxSingleQuote": false,
-  "bracketSpacing": true
+  "bracketSpacing": true,
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
