--- a/.prettierrc
+++ b/.prettierrc
@@ -8,5 +8,6 @@
   "arrowParens": "avoid",
   "jsxSingleQuote": false,
   "bracketSpacing": true,
-  "plugins": ["prettier-plugin-tailwindcss"]
+  "plugins": ["prettier-plugin-tailwindcss"],
+  "endOfLine": "lf"
 }
