--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "embla-carousel-react": "^8.1.3",
     "lucide-react": "^0.363.0",
     "next": "^14.2.23",
-    "next-cloudinary": "^6.6.2",
     "notion-client": "^7.1.6",
     "notion-utils": "^6.16.0",
     "react": "^18",
@@ -35,6 +34,7 @@
     "react-icons": "^5.0.1",
     "react-notion-x": "^7.2.6",
     "resend": "^3.5.0",
+    "sharp": "^0.33.5",
     "styled-components": "^6.1.8",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
